# itmo-info-bot

./: Dockerfile  README.md  compose.yml  pyproject.toml
app/: asgi.py
app/config/: log.py  settings.py
app/domain/itmo/: controllers.py  schemas.py
app/lib/utils/: get_model.py  pyproject.py  tavily_tools.py
app/server/: openapi.py  plugins.py  routers.py
app/services/agents/: promts.py
scripts/: entry
