[tool.poetry]
name = "itmo-info-bot"
version = "0.1.0"
description = ""
authors = ["Sergei Volchkov <c4s23@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = {extras = ["full"], version = "^2.14.0"}
litestar-granian = "^0.9.0"
langchain-openai = "^0.3.3"
langchain-community = "^0.3.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
